Removed test file
Removed unecessary test file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: shaded_text
 description: A new Flutter package project.
 version: 0.0.1
-author:
-homepage:
+author: Vince <vicante23@gmail.com>
+homepage: https://github.com/SoVinceble/shaded_text.git
+publish_to: https://github.com/SoVinceble/shaded_text.git
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
